fixing the grid margin issue, which lead to misaligned grid cells

--- a/style.css
+++ b/style.css
@@ -109,6 +109,8 @@ a {
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr;
     position: sticky;
+    height: 200px;
+    
     /* column-gap: 10px; */
 }
 
@@ -218,14 +220,15 @@ a {
     box-shadow: 2px 2px 7px rgb(204, 204, 204);
 }
 .announcements {
+    gap: 20px;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 60px 1fr;
+    grid-template-rows: 1fr 30px 1fr;
     
 }
 
 .announcements div:nth-child(2) {
-    margin-top: 20px;
+    padding: ;
 }
 .announcement-card {
     background-color: white;
